# csync2

./: .gitignore  .project  AUTOGEN_DEBIAN_FIX.md  AUTOTOOLS_MODERNIZATION.md  BISON_PORTABILITY_FIXES.md  CLAUDE.md  COMPILER_WARNINGS_ENHANCEMENT.md  CPP_MIGRATION_PLAN.md  CROSS_PLATFORM_LIBRSYNC_FIX.md  GITHUB_ACTIONS_POSTGRESQL.md  LINUX_TESTING_GUIDE.md  MACOS_POSTGRESQL_GUIDE.md  Makefile.am  Package.swift  README  SWIFT_MIGRATION.md  SWIFT_PROJECT_SUMMARY.md  SWIFT_README.md  TESTING_SUMMARY.md  YACC_PORTABILITY_FIX.md  alter_mode_size.sql  autogen.sh  build-for-swift.sh  build-swift.sh  call_diagram.md  cfgfile_parser.y  cfgfile_scanner.l  check.c  checktxt.c  clang.address.sh  class_diagram.puml  configure.ac  conn.c  create_postgresql.sh  csync2  csync2.c  csync2.cfg  csync2.db  csync2.h  csync2.key  (+82 more)
src/: Makefile.am  action.c  action.cpp  action.h  action.hpp  buffer.c  buffer.cpp  buffer.h  buffer.hpp  cfgfile_parser.y  cfgfile_parser_processed.c  cfgfile_parser_processed.cpp  cfgfile_parser_processed.h  cfgfile_parser_processed.y  cfgfile_scanner.cpp  cfgfile_scanner.l  check.c  check.cpp  check.h  check.hpp  checktxt.c  checktxt.cpp  checktxt.h  checktxt.hpp  config.hpp  conn.c  conn.cpp  conn.h  conn.hpp  connection.hpp  csync2-compare  csync2.c  csync2.cpp  csync2.h  csync2.hpp  csync2_cpp.hpp  daemon.c  daemon.cpp  daemon.h  daemon.hpp  (+108 more)
test/: #maildir.test#  .#maildir.test  .gitignore  DATABASE_COLLATION_SETUP.md  Makefile.am  Makefile.am.new  PORTABLE_TOUCH_README.md  RAW_LOG_CLEANUP_FIX.md  USER_GROUP_NORMALIZATION.md  action.test  auto_resolve.test  auto_resolve_older.sh  auto_resolve_older.test  auto_resolve_younger.sh  auto_resolve_younger.test  big.sh  cleanup_raw_logs.sh  clear_db.sql  collect_failed_tests.sh  combine_hash.sh  common.cfg  common.cfg.new  common_files.cfg  common_remove_config.cfg  compare.sh  compare.test  compare_sql.sh  config_hash.sh  connect_cockroach.sh  connect_mysql.sh  connect_pgsql.sh  connect_sqlite.sh  create_csync2_schema.sql  create_mysql.sh  create_pgsql.sh  csync2_cockroach_local.cfg  csync2_cockroach_peer.cfg  csync2_local_remove_config.cfg  csync2_mysql_local.cfg  csync2_mysql_local_remove_config.cfg  (+140 more)
test/auto_resolve/: 3.log.res  3.mysql.res  4.log.res  4.mysql.res  5.log.res  5.mysql.res  6.log.res  7.log.res  8.log.res  8.mysql.res
test/auto_resolve_older/: 10.log.res  10.mysql.res  10.rsync.res  11.log.res  11.mysql.res  2.log.res  3.cockroach.res  3.log.res  3.mysql.res  4.log.res  4.mysql.res  5.cockroach.res  5.log.res  5.mysql.res  6.log.res  6.mysql.res  6.rsync.res  7.log.res  7.mysql.res  8.cockroach.res  8.log.res  8.mysql.res  8.rsync.res  9.log.res  9.mysql.res  peer.log.res
test/auto_resolve_younger/: 10.cockroach  10.cockroach.res  10.log.res  10.mysql.res  10.rsync.res  11.cockroach.res  11.log.res  2.log.res  3.log.res  3.mysql.res  4.log.res  4.mysql.res  5.cockroach.res  5.log.res  5.mysql.res  6.log.res  6.mysql.res  6.rsync.res  7.cockroach.res  7.log.res  7.mysql.res  8.cockroach.res  8.log.res  8.mysql.res  9.cockroach.res  9.log.res  9.mysql.res  peer.log.res
test/fix_missing_path/: 0.cockroach  2.cockroach  2.log.res  2.mysql.res  3.log.res  3.mysql.res  3.rsync.res  4.cockroach.res  4.log.res  4.mysql.res  peer.log.res
test/maildir/: 10.log.res  10.mysql.res  11.log.res  11.mysql.res  11.rsync.res  12.log.res  12.mysql.res  13.log.res  13.mysql.res  14.log.res  15.log.res  2.log.res  2.mysql.res  3.log.res  3.mysql.res  4.log.res  4.mysql.res  5.log.res  5.mysql.res  6.log.res  6.mysql.res  7.log.res  7.mysql.res  8.cockroach.res  8.log.res  8.mysql.res  9.log.res  9.mysql.res  9.rsync.res  peer.log.res
test/move_hardlink/: 0.cockroach  2.log.res  3.cockroach.res  3.log.res  3.mysql.res  4.cockroach.res  4.log.res  4.mysql.res  5.cockroach  5.log.res  5.mysql.res  6.log.res  peer.log.res
test/mv_dir/: 2.log.res  3.log.res  peer.log.res
test/new_hardlinks/: 10.cockroach.res  10.log.res  10.mysql.res  2.cockroach.res  2.log.res  2.mysql.res  3.cockroach.res  3.log.res  3.mysql.res  4.cockroach.res  4.log.res  4.mysql.res  5.log.res  5.mysql.res  6.log.res  6.mysql.res  7.log.res  7.mysql.res  7.rsync.res  8.cockroach.res  8.log.res  8.mysql.res  8.rsync.res  9.cockroach.res  9.log.res  9.mysql.res  peer.log.res
test/ping/: 2.log.res  3.log.res  4.log.res  4.mysql.res  5.log.res  6.log.res  6.mysql.res  7.log.res
test/recursive/: 2.log.res  2.mysql.res  3.cockroach  3.log.res  3.mysql.res  4.log.res  4.mysql.res  5.log.res  peer.log.res
test/sort_order/: 10.log.res  10.mysql.res  11.log.res  12.log.res  13.log.res  15.log.res  16.log.res  2.log.res  3.log.res  4.log.res  4.mysql.res  5.log.res  6.log.res  7.log.res  8.log.res  8.mysql.res  9.log.res
test/symlink/: 2.log.res  3.log.res  4.log.res  peer.log.res
test/test_action/: 2.log.res  3.log.res  3.rsync.res  4.log.res  4.mysql.res
test/test_compare/: 2.log.res  3.log.res  4.log.res  6.log.res  7.log.res  7.rsync.res  8.log.res
test/test_delete_both/: 2.log.res  3.log.res  4.log.res
test/test_diff/: 3.log.res  4.log.res
test/test_different/: 0.cockroach  2.log.res  2.mysql.res  3.log.res  3.mysql.res  4.cockroach  4.log.res  4.mysql.res  5.log.res  5.mysql.res  6.log.res  6.mysql.res  7.log.res  7.mysql.res  8.log.res  peer.log.res
test/test_dir_recursive/: 2.log.res  3.log.res  (+3 more)
tests/: .gitignore  Makefile.am  auto_resolve.cfg  auto_resolve.sh  auto_resolve.test  clear_db.sql  common.cfg  csync2_fdbsql.cfg  csync2_local.cfg  csync2_mysql_local.cfg  csync2_mysql_peer.cfg  csync2_pgsql_local.cfg  csync2_pgsql_peer.cfg  csync2_postgres.conf  csync2_psql_local.cfg  csync2_psql_peer.cfg  local.sh  maildir.test  move_hardlink.cfg  move_hardlink.sh  move_hardlink.test  move_hardlink_3.log.res  move_hardlink_4.log.res  move_hardlink_4.rsync.res  move_hardlink_5.log.res  move_hardlink_5.mysql.res  set_database.sh  start_daemon.test  test_00  test_03  test_08  test_20  test_check.cfg  test_diff.sh  test_diff.test  test_different.cfg  test_different.test  test_dir_time.test  test_dirty_but_same.cfg  test_key_time_remove.c  (+39 more)
(+1531 files in other folders)
